--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
+        <div id="earnings-from-majors" class="chart-container"></div>
+        <script>
+          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html', {});
+        </script>
+      </div>
+    </div>
+    <div class="row">
+      <div class="one column">&nbsp;</div>
+      <div class="ten columns">
         <hr>
         <div id="footer">
           <a href="http://bsou.io">Ben Southgate</a> | 2015 | <a href="http://github.com/bsouthga/atlantic-income-charts/">view source on Github</a>
@@ -65,13 +74,5 @@
       </div>
     </div>
   </div>
-  <!--script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-54214517-2', 'auto');
-    ga('send', 'pageview');
-  </script-->
 </body>
 </html>
