--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="income-major" class="chart-container"></div>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pym/0.4.3/pym.min.js"></script>
         <script>
-            var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html', {});
+            var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html?noSource=true', {});
         </script>
       </div>
     </div>
@@ -50,7 +50,7 @@
         <h4>"Elite" Names and College Major</h4>
         <div id="elite-name-major" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html', {});
+          var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html?noSource=true', {});
         </script>
       </div>
     </div>
@@ -60,7 +60,7 @@
         <h4>Expected Earnings</h4>
         <div id="earnings-from-majors" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html', {});
+          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html?noSource=true', {});
         </script>
       </div>
     </div>
