--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h4>Parent Income and Major Choice</h4>
         <div id="income-major" class="chart-container"></div>
         <script>
-            var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html?noSource=false', {});
+            var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html', {});
         </script>
       </div>
     </div>
@@ -55,7 +55,7 @@
         <h4>"Elite" Names and College Major</h4>
         <div id="elite-name-major" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html?noSource=false', {});
+          var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html', {});
         </script>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <h4>Expected Earnings</h4>
         <div id="earnings-from-majors" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html?noSource=false', {});
+          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html', {});
         </script>
       </div>
     </div>
