--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h2>Income and College Major Choice</h2>
+        <h2>How Does Someone's Choice of College Major Correlate With Their Parents' Household Income?</h2>
         <hr>
       </div>
     </div>
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h4>Parent Income and Major Choice</h4>
+        <h4>How Much More or Less Likely Are Cambridge Students With Rare, Elite Surnames to Choose Certain Majors?</h4>
         <div id="income-major" class="chart-container"></div>
         <script>
             var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html', {});
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h4>Expected Earnings</h4>
+        <h4>Median Mid-Career Earnings, by College Major</h4>
         <div id="earnings-from-majors" class="chart-container"></div>
         <script>
           var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html', {});
