--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h2>How Does Someone's Choice of College Major Correlate With Their Parents' Household Income?</h2>
+        <h2>Income and College Major Choice</h2>
         <hr>
       </div>
     </div>
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h4>How Much More or Less Likely Are Cambridge Students With Rare, Elite Surnames to Choose Certain Majors?</h4>
+        <h4>How Does Someone's Choice of College Major Correlate With Their Parents' Household Income?</h4>
         <div id="income-major" class="chart-container"></div>
         <script>
             var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html', {});
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="one column">&nbsp;</div>
       <div class="ten columns">
-        <h4>"Elite" Names and College Major</h4>
+        <h4>How Much More or Less Likely Are Cambridge Students With Rare, Elite Surnames to Choose Certain Majors?</h4>
         <div id="elite-name-major" class="chart-container"></div>
         <script>
           var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html', {});
