--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <style>
 
@@ -45,7 +45,7 @@
         <h4>How Does Someone's Choice of College Major Correlate With Their Parents' Household Income?</h4>
         <div id="income-major" class="chart-container"></div>
         <script>
-            var pymParent = new pym.Parent('income-major', 'http://bsouthga.github.io/income-major/index.html', {});
+            var pymParent = new pym.Parent('income-major', 'https://bsouthga.github.io/income-major/index.html', {});
         </script>
       </div>
     </div>
@@ -55,7 +55,7 @@
         <h4>How Much More or Less Likely Are Cambridge Students With Rare, Elite Surnames to Choose Certain Majors?</h4>
         <div id="elite-name-major" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('elite-name-major', 'http://bsouthga.github.io/elite-name-major/index.html', {});
+          var pymParent = new pym.Parent('elite-name-major', 'https://bsouthga.github.io/elite-name-major/index.html', {});
         </script>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <h4>Median Mid-Career Earnings, by College Major</h4>
         <div id="earnings-from-majors" class="chart-container"></div>
         <script>
-          var pymParent = new pym.Parent('earnings-from-majors', 'http://bsouthga.github.io/earnings-from-majors/index.html', {});
+          var pymParent = new pym.Parent('earnings-from-majors', 'https://bsouthga.github.io/earnings-from-majors/index.html', {});
         </script>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="ten columns">
         <hr>
         <div id="footer">
-          <a href="http://bsou.io">Ben Southgate</a> | 2015 | <a href="http://github.com/bsouthga/atlantic-income-charts/">view source on Github</a>
+          <a href="http://bsou.io">Ben Southgate</a> | 2015 | <a href="https://github.com/bsouthga/atlantic-income-charts/">view source on Github</a>
         </div>
       </div>
     </div>
